fix(Results) - Fixed spacing of command line output (#29)

--- a/src/app/components/results/results.component.scss
+++ b/src/app/components/results/results.component.scss
@@ -50,8 +50,8 @@
       position: absolute;
       left: 0;
       right: 0;
-      top: 154px;
-      bottom: 58px;
+      top: 167px;
+      bottom: 60px;
       z-index: -1;
     }
   }
